js/src/tests/test262/built-ins/Error/prototype/stack/setter-via-assignment.js



















var get = Object.getOwnPropertyDescriptor(Error.prototype, 'stack').get;


var plain = Object.create(Error.prototype);
plain.stack = 'sentinel';

verifyProperty(plain, 'stack', {
  value: 'sentinel',
  writable: true,
  enumerable: true,
  configurable: true,
});

for (var i = 0; i < nativeErrors.length; ++i) {
  var Ctor = nativeErrors[i];
  var err = new Ctor('msg');

  
  
  
  assert.throws(TypeError, function () {
    err.stack = null;
  }, Ctor.name + ': null assignment');

  assert.throws(TypeError, function () {
    err.stack = 0;
  }, Ctor.name + ': numeric assignment');

  assert.throws(TypeError, function () {
    err.stack = undefined;
  }, Ctor.name + ': undefined assignment');

  
  
  
  assert.sameValue(typeof get.call(err), 'string', Ctor.name + ': [[ErrorData]] preserved across failed setters');

  
  err.stack = 'updated';
  assert.sameValue(err.stack, 'updated', Ctor.name + ': string assignment is observable');
}






assert.throws(TypeError, function () {
  Error.prototype.stack = 'top-level';
});

reportCompare(0, 0);
